--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "up-latest": "yarn up --latest",
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "deploy": "git add . && git commit -m "
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.4",
@@ -25,16 +27,29 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/lexend": "^4.5.2",
+    "@urql/core": "^2.3.6",
+    "@urql/exchange-auth": "^0.1.7",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^16.2.0",
+    "graphql-tag": "^2.12.6",
+    "jwt-decode": "^3.1.2",
     "next": "^12.0.7",
     "next-pwa": "^5.4.4",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "urql": "^2.0.6"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
+    "@graphql-codegen/cli": "2.3.1",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.2",
+    "@graphql-codegen/typescript-operations": "2.2.2",
+    "@graphql-codegen/typescript-urql": "^3.4.2",
     "@types/react": "^17.0.38",
     "commitlint": "^16.0.1",
     "eslint": "^8.6.0",
