--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint-staged": "^12.1.5",
     "next-sitemap": "^1.6.203",
     "prettier": "^2.5.1",
+    "webpack": "^4.46.0",
     "standard-version": "^9.3.2",
     "typescript": "^4.5.4"
   }
